[package]
name = "pico_quantizer"
version = "0.1.0"
description = "Demo for MTM"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
panic-probe = { version = "0.3", features = ["print-defmt"] }
portable-atomic = { version = "1.10.0", features = ["critical-section"] }

embassy-embedded-hal = { version = "0.3", features = ["defmt"] }
embassy-rp = { version = "0.4", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-time = { version = "0.4", features = ["defmt"] }
embassy-sync = { version = "0.6", features = ["defmt"] }
embassy-executor = { version = "0.7", features = ["defmt", "task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt" ] }
embassy-futures = "0.1"
static_cell = "2.1.0"

[[bin]]
name = "pico_quantizer"
test = false

[profile.release]
debug = 2
lto = true
opt-level = 'z'


